plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'bgaebalja'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring boot
    implementation 'org.springframework.boot:spring-boot-starter-web:2.7.12'

    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    // json
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'
    implementation 'org.json:json:20220924'

    // springfox
    implementation 'io.springfox:springfox-boot-starter:3.0.0'
    implementation 'io.springfox:springfox-swagger-ui:3.0.0'

    // data
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.7.12'
    implementation 'com.h2database:h2:2.1.214'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.12'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5:2.15.2'

    //gson
    implementation 'com.google.code.gson:gson:2.10.1'

    // security
    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.8'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // file
    implementation 'software.amazon.awssdk:s3:2.20.52'
    implementation 'software.amazon.awssdk:sts:2.20.52'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.8'
    testImplementation 'org.springframework.security:spring-security-test:5.7.3'

    // health check
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
}

tasks.named('test') {
    useJUnitPlatform()
}

task printProjectName {
    doLast {
        println project.name
    }
}

task printProjectVersion {
    doLast {
        println version
    }
}

jar {
    enabled = false
}
